fix: Resolve top content not visible in mobile-view

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
 .container {
 	margin: 0 auto;
 	max-width: 1440px;
-	height: 100vh;
 	display: flex;
 	align-items: center;
 	align-content: center;
